Avalara Fullqa/src/zAgileConnect/objects/ZOperationMessages__c.object
<CustomObject>
    <description>This object stores messages to be displayed in a salesforce entity, usually Case, it is used to display error messages to the end user from asynchronous operations.</description>
    <fields>
        <fullName>CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseId</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>ZCaseMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operation_User__c</fullName>
        <label>Operation User</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ZOperationMessages</label>
    <nameField>
        <label>ZCaseMessages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZOperationMessages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>